--- a/src/components/MessageForm.css
+++ b/src/components/MessageForm.css
@@ -2,5 +2,73 @@
     height: 80vh;
     border: 1px solid lightgray;
     overflow-y: scroll;
-    margin-bottom: 12px;
+    margin-bottom: 20px;
 }
+.message-inner{ 
+    margin-left: 20px;
+    margin-bottom: 10px;
+    padding: 10px;
+    min-width: 200px;
+    text-align: left;
+    min-height: 80px;
+    font: 400 1em sans-serif;
+    display: inline-block;
+    border-radius: 10px;
+    background-color:#d1e7dd ;
+}
+
+.incoming-message .message-inner{
+    background-color: #ffdab9;
+
+}
+/* .message-content{
+    font-weight: 300;
+    font-style: 14px;
+    margin-top: 10px;
+} */
+.incoming-message{
+    display: flex;
+    justify-content: flex-end;
+    margin-right: 20px;
+}
+
+.message-timestamp-left{
+    font-size: 0.84em;
+    font-weight: 300;
+    margin-top: 10px;
+}
+
+.message-sender{
+    margin-bottom: 5px;
+    font-weight: bold;
+}
+
+.message-date-indicator{
+    width: 150px;
+    margin: 0 auto;
+}
+
+.conversation-info{
+    padding: 0;
+    margin: 0;
+    text-align: center;
+    height: 100px;
+}
+.sender-status-img{
+    width: 35px;
+    height: 35px;
+    border-radius: 50%;
+    object-fit: cover;
+    margin-right: 10px;
+}
+
+
+.conversation-profile-picture{
+    width: 60px;
+    height: 60px;
+    margin-bottom: 30px;
+    border-radius: 50%;
+    margin: 10px auto;
+    object-fit: cover;
+    margin-left: 10px;
+} 
